Actually fix the broken CSS for welcome

--- a/www/main.css
+++ b/www/main.css
@@ -155,12 +155,11 @@ div.virus p {
 
 #welcome {
     position: absolute;
-    height: 80%;
+    height: 90vh;
     width: 50%;
     left: 50%;
-    top: 50%;
+    top: 5%;
     margin-left: -25%;
-    margin-top: -20%;
     background: white;
     border: 3px solid black;
     padding: 0;
@@ -347,13 +346,8 @@ ul.categories li.uninfected {
     }
 
     #welcome {
-        position: absolute;
-        height: 80%;
         width: 80%;
-        left: 50%;
-        top: 50%;
         margin-left: -40%;
-        margin-top: -40%;
     }
 
     #welcomecontent {
